--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,9 +3,9 @@ image: Visual Studio 2017
 
 environment:
   matrix:
-    - version: 1.11-rc
+    - version: 1.11
       variant: windowsservercore-ltsc2016
-    - version: 1.11-rc
+    - version: 1.11
       variant: nanoserver-sac2016
     - version: 1.10
       variant: windowsservercore-ltsc2016
