--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: bash
 services: docker
 
 env:
-  - VERSION=1.11-rc VARIANT=stretch
-  - VERSION=1.11-rc VARIANT=alpine3.8
-  - VERSION=1.11-rc VARIANT=alpine3.7
+  - VERSION=1.11 VARIANT=stretch
+  - VERSION=1.11 VARIANT=alpine3.8
+  - VERSION=1.11 VARIANT=alpine3.7
   - VERSION=1.10 VARIANT=stretch
   - VERSION=1.10 VARIANT=alpine3.8
   - VERSION=1.10 VARIANT=alpine3.7
