--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,6 +3,10 @@ image: Visual Studio 2017
 
 environment:
   matrix:
+    - version: 1.12-rc
+      variant: windowsservercore-ltsc2016
+    - version: 1.12-rc
+      variant: nanoserver-sac2016
     - version: 1.11
       variant: windowsservercore-ltsc2016
     - version: 1.11
