--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ matrix:
   include:
     - os: windows
       dist: 1803-containers
+      env: VERSION=1.12-rc VARIANT=windows/windowsservercore-1803
+    - os: linux
+      env: VERSION=1.12-rc VARIANT=stretch
+    - os: linux
+      env: VERSION=1.12-rc VARIANT=alpine3.8
+    - os: windows
+      dist: 1803-containers
       env: VERSION=1.11 VARIANT=windows/windowsservercore-1803
     - os: linux
       env: VERSION=1.11 VARIANT=stretch
