--- a/Dockerfile-windows-nanoserver.template
+++ b/Dockerfile-windows-nanoserver.template
@@ -1,4 +1,4 @@
-FROM microsoft/nanoserver:%%MICROSOFT-TAG%%
+FROM mcr.microsoft.com/windows/nanoserver:%%MICROSOFT-TAG%%
 
 # $ProgressPreference: https://github.com/PowerShell/PowerShell/issues/2138#issuecomment-251261324
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
