--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ matrix:
     - os: linux
       env: VERSION=1.12 VARIANT=stretch
     - os: linux
+      env: VERSION=1.12 VARIANT=alpine3.10
+    - os: linux
       env: VERSION=1.12 VARIANT=alpine3.9
     - os: windows
       dist: 1803-containers
@@ -16,9 +18,9 @@ matrix:
     - os: linux
       env: VERSION=1.11 VARIANT=stretch
     - os: linux
-      env: VERSION=1.11 VARIANT=alpine3.9
+      env: VERSION=1.11 VARIANT=alpine3.10
     - os: linux
-      env: VERSION=1.11 VARIANT=alpine3.8
+      env: VERSION=1.11 VARIANT=alpine3.9
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
