--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ matrix:
   include:
     - os: windows
       dist: 1803-containers
+      env: VERSION=1.13-rc VARIANT=windows/windowsservercore-1803
+    - os: linux
+      env: VERSION=1.13-rc VARIANT=buster
+    - os: linux
+      env: VERSION=1.13-rc VARIANT=alpine3.10
+    - os: windows
+      dist: 1803-containers
       env: VERSION=1.12 VARIANT=windows/windowsservercore-1803
     - os: linux
       env: VERSION=1.12 VARIANT=stretch
