--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
       dist: 1803-containers
       env: VERSION=1.12 VARIANT=windows/windowsservercore-1803
     - os: linux
+      env: VERSION=1.12 VARIANT=buster
+    - os: linux
       env: VERSION=1.12 VARIANT=stretch
     - os: linux
       env: VERSION=1.12 VARIANT=alpine3.10
@@ -22,6 +24,8 @@ matrix:
     - os: windows
       dist: 1803-containers
       env: VERSION=1.11 VARIANT=windows/windowsservercore-1803
+    - os: linux
+      env: VERSION=1.11 VARIANT=buster
     - os: linux
       env: VERSION=1.11 VARIANT=stretch
     - os: linux
