--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ services: docker
 matrix:
   include:
     - os: linux
+      env: VERSION=1.14-rc VARIANT=buster
+    - os: linux
+      env: VERSION=1.14-rc VARIANT=alpine3.10
+    - os: linux
       env: VERSION=1.13 VARIANT=buster
     - os: linux
       env: VERSION=1.13 VARIANT=stretch
