--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ matrix:
     - os: linux
       env: VERSION=1.14-rc VARIANT=buster
     - os: linux
-      env: VERSION=1.14-rc VARIANT=alpine3.10
+      env: VERSION=1.14-rc VARIANT=alpine3.11
     - os: linux
       env: VERSION=1.13 VARIANT=buster
     - os: linux
       env: VERSION=1.13 VARIANT=stretch
+    - os: linux
+      env: VERSION=1.13 VARIANT=alpine3.11
     - os: linux
       env: VERSION=1.13 VARIANT=alpine3.10
     - os: linux
@@ -18,9 +20,9 @@ matrix:
     - os: linux
       env: VERSION=1.12 VARIANT=stretch
     - os: linux
-      env: VERSION=1.12 VARIANT=alpine3.10
+      env: VERSION=1.12 VARIANT=alpine3.11
     - os: linux
-      env: VERSION=1.12 VARIANT=alpine3.9
+      env: VERSION=1.12 VARIANT=alpine3.10
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
