--- a/1.15-rc/windows/nanoserver-1809/Dockerfile
+++ b/1.15-rc/windows/nanoserver-1809/Dockerfile
@@ -14,9 +14,9 @@ RUN setx /m PATH "%GOPATH%\bin;C:\go\bin;%PATH%"
 USER ContainerUser
 # doing this first to share cache across versions more aggressively
 
-ENV GOLANG_VERSION 1.15beta1
+ENV GOLANG_VERSION 1.15rc1
 
-COPY --from=golang:1.15beta1-windowsservercore-1809 C:\\go C:\\go
+COPY --from=golang:1.15rc1-windowsservercore-1809 C:\\go C:\\go
 RUN go version
 
 WORKDIR $GOPATH
